testsuite/tests/interpreter_errors/invalid_is_clause_left_operand/test.out
main.adb

Error: Type error: expected Node but got Str

query p when "Hello" is ObjectDecl
             ^^^^^^^^             

